add yandex maps links

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="tours-card">
             <img src="images/tours-baikal.jpg" alt="" />
             <div class="tours-card-content">
-              <a href="#" class="tours-card-link">
+              <a href="https://yandex.ru/maps/225/russia/geo/ozero_baykal/189898352/?ll=106.831328%2C53.710300&z=7.26" target="_blank" class="tours-card-link">
                 <img src="images/icons/tours-mark.svg" alt="">
                 <span>Байкал</span>
               </a>
@@ -128,7 +128,7 @@
           <div class="tours-card">
             <img src="images/tours-yakutiya.jpg" alt="" />
             <div class="tours-card-content">
-              <a href="#" class="tours-card-link">
+              <a href="https://yandex.ru/maps/geo/respublika_sakha_yakutiya_/53000067/?ll=120.380061%2C68.828961&z=4.29" target="_blank" class="tours-card-link">
                 <img src="images/icons/tours-mark.svg" alt="">
                 <span>Якутия</span>
               </a>
@@ -147,7 +147,7 @@
           <div class="tours-card">
             <img src="images/tours-sev.jpg" alt="" />
             <div class="tours-card-content">
-              <a href="#" class="tours-card-link">
+              <a href="https://yandex.ru/maps/geo/kolskiy_poluostrov/1935939241/?ll=36.906188%2C67.742682&z=7.05" target="_blank" class="tours-card-link">
                 <img src="images/icons/tours-mark.svg" alt="">
                 <span>Кольский полуостров</span>
               </a>
@@ -166,7 +166,7 @@
           <div class="tours-card">
             <img src="images/tours-ural.jpg" alt="" />
             <div class="tours-card-content">
-              <a href="#" class="tours-card-link">
+              <a href="https://yandex.ru/maps/org/severny_ural/1150683713/?ll=56.662322%2C58.039328&mode=search&sctx=ZAAAAAgBEAAaKAoSCYoD6Pf9c0JAEfxUFRqI71BAEhIJPbZlwFl6LkARQZyHE5gOCkAiBgABAgMEBSgKOABA5FZIAWoCcnWdAc3MzD2gAQCoAQC9AYyiSULCAQvBlNikBL3TmcGFA4ICGdGB0LXQstC10YDQvdGL0Lkg0YPRgNCw0LuKAgCSAgCaAgxkZXNrdG9wLW1hcHM%3D&sll=56.662322%2C58.039328&sspn=1.527076%2C0.622800&text=%D1%81%D0%B5%D0%B2%D0%B5%D1%80%D0%BD%D1%8B%D0%B9%20%D1%83%D1%80%D0%B0%D0%BB&z=9.92" target="_blank" class="tours-card-link">
                 <img src="images/icons/tours-mark.svg" alt="">
                 <span>Северный Урал</span>
               </a>
