--- a/index.html
+++ b/index.html
@@ -204,25 +204,25 @@
             <h2 class="footer-contacts-title"><span>НАШИ</span> КОНТАКТЫ</h2>
             <ul class="footer-contacts-list">
               <li>
-                <a href="#">
+                <a href="tel:+79280453593">
                   <img src="images/icons/phone.svg" alt="" />
                   +7 928 045 35 93
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="mailto:zaripatruslanovna@mail.ru"
                   ><img src="images/icons/email.svg" alt="" />
                   zaripatruslanovna@mail.ru
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a
                   ><img src="images/icons/clock.svg" alt="" />
                   Ежедневно: с 9:00 до 20:00
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="https://yandex.ru/maps/geo/makhachkala/53121881/?ll=47.472877%2C42.963590&z=12.52" target="_blank"
                   ><img src="images/icons/gps-mark.svg" alt="" />
                   г. Махачкала
                 </a>
